Use java.util.Base64 when encoding basic auth